[package]
name = "http-proxy"
version = "0.1.0"
authors = ["劉安 <liuan@sgcc.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.2"
clap = "2.33.1"
daemonize = "0.4.1"
httparse = "1.3.4"
once_cell = "1.4.0"

[dependencies.futures]
version = "0.3.5"
features = ["async-await"]