[package]
name = "http-proxy"
version = "0.3.0"
authors = ["劉安 <liuan@sgcc.com.cn>"]
edition = "2018"
license = "GPL-3.0"
description = "SuperHacker's HTTP/HTTPS Proxy"
homepage = "https://github.com/SuperHacker-liuan/http-proxy"
repository = "https://github.com/SuperHacker-liuan/http-proxy"
documentation = "https://github.com/SuperHacker-liuan/http-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.3"
clap = "2.33.3"
daemonize = "0.4.1"
httparse = "1.3.4"
log = "0.4.11"
once_cell = "1.4.1"
simplelog = "0.8.0"

[dependencies.futures]
version = "0.3.5"
features = ["async-await"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 20
panic = 'abort'
overflow-checks = false
